# wirekey-sdk

./: Cargo.toml  README.md
.junie/: guidelines.md
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: api_client.rs  api_client_tests.rs  auth.rs  auth_tests.rs  error.rs  http_send.rs  http_sender.rs  key_management.rs  key_management_api.rs  key_management_tests.rs  mock_opaque_sender.rs  mock_rng_provider.rs  mock_sender.rs  mod.rs  prekey_bundle.rs  private_keys.rs  remote_server.rs  responses.rs  rng_provider.rs  session_api.rs  test_utils.rs
core/src/crypto/: argon_cipher.rs  mod.rs
core/src/storage/: error.rs  key_value_storage.rs  local_storage.rs  memory_storage.rs  mod.rs  storage_manager.rs
examples/: encrypted_storage_example.rs
ffi/: Cargo.toml
js/: Cargo.toml  storage.js
rust/: Cargo.toml
rust/src/: storage.rs
test_junie/storage/: crypto_storage_tests.rs  examples.rs  mod.rs  serialization.rs
