[package]
name = "wirekey-core"
version = "0.1.0"
edition = "2024"
description = "Core SDK for WireKey E2E encryption based on Signal protocol"
authors = ["WireKey Team"]
license = "MIT"

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets", "getrandom"] }
aes-gcm = "0.10"
ed25519-dalek = "2.1"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8.5"
xeddsa = "1.0.2"
argon2 = "0.5.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0.12"

# Async runtime
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros", "test-util"], optional = true }

# Logging
log = "0.4"
rand_core = "0.9.3"
serde_arrays = "0.2.0"
async-trait = "0.1.88"
reqwest = { version = "0.12.19", features = ["json"] }
zeroize = "1.8.1"
anyhow = "1.0.98"
opaque-ke = "3.0.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"

[features]
default = ["async"]
async = ["tokio"]